# jsonpatch-trigger

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
src/jsonpatch_plus/: __init__.py  compat.py  execution.py  operations.py  parents.py  preconditions.py
src/jsonpatch_trigger/: common.py  compat.py  execution.py  operations.py  parents.py  preconditions.py  tracking.py
src/jsonpath_ops/: __init__.py  compat.py  execution.py  operations.py  parents.py  preconditions.py  tracking.py
test/: test_common.py  test_execution.py  test_operations.py  test_parents.py  test_tracking.py
